# baczek.me

./: .dockerignore  .env_example  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  config.toml  config.yml  cv.html  docker-compose.yml  docker_deploy.sh  even_more.html  exocortex.ipynb  gol.html  index.html  it_tools_notes.md  js.js  linux_must_haves.md  more.html  no_more.html  pyproject.toml  readme.md  related_posts_generator.py  site_deploy.sh  style.css  style2.css  umap.ipynb  webhook_handler.py
.github/: copilot-instructions.md  zola.yml
.github/workflows/: build.yml  checks.yml  deploy.yml  gh-pages.yml  link_check.yml  zola.yml
6obcy/: manual.html
backend/: .gitignore  Cargo.toml  README.md
backend/src/: handlers.rs  main.rs  models.rs
content/: 2022-05-01-22-47-19.md  2022-05-01-23-33-00.md  2022-05-28-13-55-05.md  2022-06-13-23-48-37.md  2022-06-16-00-10-36.md  2022-06-26-22-51-04.md  2022-07-27-15-06-09.md  2022-07-29-12-33-09.md  2022.md  2023-05-02-11-01-19.md  2023.md  2024.md  2025.md  About me.md  Colour scheme for everything.md  Custom sequencer idea dump.md  How to think.md  NixOs.md  Open source tools.md  Rust.md  Test.md  Testing git journal.md  about.md  alternatives.md  assistant.md  audio_dsp.md  baczek-in-polish.md  baczek.md  bookmarks.md  caddy.md  contact.md  content-creation-workflow.md  cosmic-horror.md  custom-sequencer-idea-dump.md  decentralisation.md  donate.md  dsp.md  excellent-words.md  exocortex.md  experience.md  (+53 more)
content/meta/: 2022-05-01-23-43-57.md  Website workflow.md  _index.md  content_creation_workflow.md  waiting_room.md  website-experience.md  website_experience.md
content/test/: Subtest.md
css/: custom.css  custom_2.css  hack.css
docs/: .htaccess
eng/: site.html
eng/css/: impress-demo.css
exocortex/: __main__.py  map.py  misc.py  page.py  rss.py
github-pages/: index.html
gol/: gol.html  gol.js
home_page/: generate.sh
home_page/pages/: even_more.html  (+2 more)
impress/: demo.mp4.REMOVED.git-id  demo_meh.mp4.REMOVED.git-id  demo_shader.mp4.REMOVED.git-id  site.html  takeover.mp4.REMOVED.git-id  teaming.mp4.REMOVED.git-id  timelapse.mp4.REMOVED.git-id
materialize/: .index.html.swp  index.html
ocean/: index.html  me.css  me.html
prometheus/: cli.html  install_linux.html  p1.html
random_shit/: program.cpp
related_generator/: __main__.py  embeddings.py  post.py  test_html_parse.py  use.py
remonty/: index.html
scripts/: build.sh  build_docker.sh  check.sh
soundpad/: index.html
static/: 2022-07-26-21-12-25.md  fit.ods  style.css
templates/: 404.html  base.html  blog.html  index.html  page.html
uav/: components.html  index.html  main.css  tests.html
(+86 files in other folders)
