[tool.poetry]
name = "exocortex"
version = "0.1.0"
description = "Wires my thoughts together in a (hopefully) graceful way"
authors = ["wint3rmute <mateusz.baczek1998@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.12,<=3.14"
graphviz = "^0.20.1"
matplotlib = "^3.6.0"
umap-learn = "0.5.7"
beautifulsoup4 = "^4.11.1"
markdown = "^3.4.1"
sentence-transformers = "^3.4.0"
gitpython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.lint.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml"]
ignore = ['E501']
