[project]
name = "exocortex"
version = "0.1.0"
description = "Wires my thoughts together in a (hopefully) graceful way"
authors = [
    { name = "wint3rmute", email = "mateusz.baczek1998@gmail.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "graphviz>=0.21,<0.22",
    "matplotlib>=3.6.0,<4.0",
    "beautifulsoup4>=4.11.1,<5.0",
    "markdown>=3.4.1,<4.0",
    "sentence-transformers>=5.1.0,<6.0",
    "gitpython>=3.1.43,<4.0",
    "umap-learn>=0.5.9.post2,<0.6",
]

[dependency-groups]
dev = [
    "ruff>=0.14,<0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exocortex"]

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml"]
lint.ignore = ['E501']
